infrastructure/network-policies/cilium-kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: amela
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: auth
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: cloudflared
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: forgejo
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: haymaker
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: monitoring
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: homarr
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: n8n
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: openmarkers
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: paperclip
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: plausible
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-kube-apiserver-egress
  namespace: uptime-kuma
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
